fixed wrapped images

--- a/October 2024/14.10.2024/Sukot assigment/styles/about-us-style.css
+++ b/October 2024/14.10.2024/Sukot assigment/styles/about-us-style.css
@@ -1,22 +1,22 @@
 body {
   background-color: black;
-  background-image: url(../images/about-us-page/hero-image-about-us.svg);
-  background-repeat: no-repeat;
-  background-size: cover;
-  filter: blur(0.2px);
 }
 
-.about-us-container-title h2 {
-  font-size: 2em;
-  padding: 0em;
+.about-us-section {
+  display: flex;
+  flex-direction: column;
 }
 
 .about-us-container-title {
-  margin-top: 3em;
+  position: absolute;
+    top: 1.6em;
+}
+
+.about-us-container-title {
+  z-index: 1;
 }
 
 .hero-image-about-us {
-  position: relative;
   animation: flowUpDown 5s ease-in-out infinite;
 }
 
@@ -25,7 +25,11 @@ footer {
 }
 
 .about-us-section {
-  height: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
 }
 
 #grand-finalle {
@@ -34,8 +38,8 @@ footer {
   color: black;
   border-radius: 0.5em;
   padding: 0.5em;
+  text-align: center;
 }
-
 
 
 @keyframes flowUpDown {
