--- a/October 2024/14.10.2024/Sukot assigment/styles/favorite.css
+++ b/October 2024/14.10.2024/Sukot assigment/styles/favorite.css
@@ -1,34 +1,33 @@
 .navbar-desktop {
   position: fixed;
 }
-
-footer {
-  position: fixed;
-  bottom: 0;
-}
-
-.favorite-movies-title-container {
-  width: 100vw;
-  position: fixed;
-  top: 10em;
-}
-
 .alert-message-container {
   display: none;
 }
 
-.favorite-movies-title-container {
-  position: fixed;
-  width: 1000vw;
-  font-size: 0.5em;
-}
 .fav-movies-container {
   display: flex;
+  justify-content: center;
+  gap: 3em;
+  margin-top: 5em;
+  flex-wrap: wrap;
+}
+
+.favorite-movies-title-container {
+  position: relative;
+  top: 1.65em;
+}
+
+.alert-message-container {
+  color: white;
+  display: none;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  gap: 3em;
-  margin-top: 5em;
+  background: green;
+  text-align: center;
+  box-shadow: 0em 0em 2.5em -1em;
+  width: 100%;
 }
 
 @media screen and (min-width:1024px) {
